# thinApp-portable-lauchpad-platform

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MVP-Week2-Summary-20260523.md  README.md  SECURITY.md  SUPPORT.md  week5_performance_optimization_20260523.md
.github/workflows/: ci.yml  code-sign.yml  release.yml
assets/prototype/: README.md  app-detail.html  index.html  onboarding.html  sandbox-browser.html  sandbox-visual.html  store.html
assets/store/: description_long.md  description_short.txt  eula.md  privacy_policy.md
docs/: ANTIVIRUS-GUIDE.md  ANTIVIRUS-TEST-PLAN.md  APP-CAPTURE-PROTOTYPE-REPORT.md  APP-CAPTURE-RESEARCH.md  ARCHITECTURE.md  BENCHMARK-TEST-PLAN.md  BENCHMARK-TEST-REPORT-TEMPLATE.md  BENCHMARK-TEST-REVIEW.md  CAPTURE-FAILURE-DIAGNOSIS.md  DEPLOYMENT-GUIDE.md  DEV-GUIDE.md  DOC-CONSISTENCY-CHECK.md  DOC-CONSISTENCY-REPORT.md  DOC-LICENSE-CHECK.md  DOC-TERM-CHECK.md  DOC-VERSION-CHECK.md  DOC-XREF-CHECK.md  FAQ.md  GITHUB-SETUP-REPORT.md  INTEGRATION-TEST-CASES.md  INTEGRATION-TEST-EXECUTION.md  INTEGRATION-TEST-PLAN-REPORT.md  INTEGRATION-TEST-REPORT-TEMPLATE.md  INTEGRATION-TEST-SCOPE.md  LAUNCHPAD-TECH-SELECTION.md  LAUNCHPAD-UI-PROTOTYPE-REPORT.md  MVP-APP-CAPTURE-DESIGN-REPORT.md  MVP-APP-CAPTURE-DESIGN.md  MVP-BLOCKERS-RETRY.md  MVP-BLOCKERS.md  MVP-BUILD-ENV-REPORT.md  MVP-BUILD-ENV-SETUP-REPORT-RETRY.md  MVP-BUILD-ENV-VERIFICATION.md  MVP-BUILD-LOG.md  MVP-CMAKE-VCPKG-SETUP-CONFIRM-RETRY.md  MVP-CMAKE-VCPKG-SETUP-CONFIRM.md  MVP-CMAKE-VERIFICATION-RETRY.md  MVP-CMAKE-VERIFICATION.md  MVP-CODE-FIX-REPORT.md  MVP-CODE-QUALITY-CONFIRM.md  (+116 more)
review-package/demos/: README.md
src/engine/: CMakeLists.txt
src/engine/common/: CMakeLists.txt  common.cpp  common.h  perf_monitor.cpp  perf_monitor.h
src/engine/hook/: CMakeLists.txt  hook_engine.cpp  hook_engine.def  hook_engine.h  hook_engine_fixed.cpp  hook_engine_temp.cpp  hook_engine_v2.cpp  process_inherit.cpp  process_inherit.h  vreg_engine.cpp  vreg_engine.h
src/engine/process/: CMakeLists.txt  process_inherit.cpp  process_inherit.h
src/engine/redirect/: redirect_engine.cpp  redirect_engine.h
src/engine/vfs/: CMakeLists.txt  path_redirect.cpp  path_redirect.h  vfs.cpp  vfs.h  vfs_cache.cpp  vfs_cache.h
src/engine/vreg/: CMakeLists.txt  hive_manager.cpp  hive_manager.h  vreg.cpp  vreg.h
src/launchpad/: CMakeLists.txt  app_manager.cpp  app_manager.h  apps.json  main.cpp
src/launchpad/ui/: app_card.cpp  app_card.h  app_editor.cpp  app_editor.h  main_window.cpp  main_window.h  sandbox_browser.cpp  sandbox_browser.h  sandbox_model.cpp  sandbox_model.h  settings_dialog.cpp  settings_dialog.h  taskbar_manager.cpp  taskbar_manager.h  tray_menu.cpp  tray_menu.h
src/packager/: CMakeLists.txt  app_capture.cpp  app_capture.h  app_store.cpp  app_store.h  compat_rules.cpp  compat_rules.h  vapp_package.cpp  vapp_package.h
src/sync/: CMakeLists.txt
tests/: CMakeLists.txt  test_hook_x64.cpp
tests/compatibility/: CMakeLists.txt
tests/data/: test_registry.hive
tests/data/benchmark_apps/: notepadpp_simulator.cpp
tests/data/test_files/: test_redirect.txt
tests/data/test_registry/: test_hive.json
tests/data/test_vfs/User/: settings.ini
tests/engine/: CMakeLists.txt  test_child.cpp  test_hook.cpp  test_hook_cover.cpp  test_p0_fixes.cpp  test_p1_fixes.cpp  test_parent.cpp  test_path_redirect.cpp  test_perf_monitor.cpp  test_process.cpp  test_process_inherit.cpp  test_security_dll_hijack.cpp  test_security_hook_override.cpp  test_security_path_traversal.cpp  test_security_registry_injection.cpp  test_vfs.cpp  test_vfs_cache.cpp  test_vreg.cpp  test_vreg_redirect.cpp
tests/integration/: test_hook_injection.bat  test_launchpad.bat  verify_sandbox.bat
tests/launchpad/: test_app_editor.cpp  test_app_manager.cpp  test_batch_operations.cpp  test_config_io.cpp  test_launchpad.cpp  test_memory_usage.cpp  test_settings_dialog.cpp  test_startup_speed.cpp  test_taskbar_manager.cpp  test_ui_responsiveness.cpp
tests/packager/: test_app_capture.cpp  test_app_store.cpp  test_capture_diagnosis.cpp  test_compat_rules.cpp
tests/performance/: CMakeLists.txt  analyze_performance.py  performance_report_template.html  test_hook_overhead.bat  test_memory_benchmark.bat  test_startup_benchmark.bat  test_ui_responsiveness.bat
tools/: CMakeLists.txt
tools/ci/: CMakeLists.txt  check_compat_rules.ps1  collect_perf_logs.ps1  create_self_signed_cert.ps1  download-fixtures.ps1  fix-doc-terms.ps1  generate_test_report.ps1  package-review.ps1  run-benchmark-tests.ps1  run-integration-tests.ps1  run_all_tests.bat  run_coverage.bat  run_integration_tests.bat  run_perf_tests.bat  setup-vm.ps1  sign_batch.ps1  sign_ev.ps1  sign_executable.ps1  sign_timestamp.ps1  sync_app_store.ps1  test-benchmark.ps1  test-portability.ps1  verify_signature.ps1  vt_scan.py
tools/deploy/: collect-logs.ps1  create_installer.nsi  create_portable_zip.ps1  deploy-via-gpo.ps1  deploy_indie_site.ps1  prepare_store_assets.ps1  submit_itch.ps1  submit_ms_store.ps1  submit_steam.ps1
