# tests/engine/CMakeLists.txt
# 引擎模块单元测试

# 查找 Google Test（如果需要）
# find_package(GTest QUIET)
# 
# if(GTest_FOUND)
#     message(STATUS "找到 Google Test，启用单元测试")
#     include(GoogleTest)
# else()
#     message(WARNING "未找到 Google Test，跳过单元测试")
#     return()
# endif()

# 暂时创建占位测试目标（桩实现）
# 在实际开发中，这里会添加真正的单元测试

# 测试 Hook 引擎
# add_executable(test_hook_engine test_hook_engine.cpp)
# target_link_libraries(test_hook_engine
#     PRIVATE
#         engine_hook
#         GTest::gtest
#         GTest::gtest_main
# )
# gtest_discover_tests(test_hook_engine)

# 测试 VFS 模块
# add_executable(test_vfs test_vfs.cpp)
# target_link_libraries(test_vfs
#     PRIVATE
#         engine_vfs
#         GTest::gtest
#         GTest::gtest_main
# )
# gtest_discover_tests(test_vfs)

# 测试 VReg 模块
# add_executable(test_vreg test_vreg.cpp)
# target_link_libraries(test_vreg
#     PRIVATE
#         engine_vreg
#         GTest::gtest
#         GTest::gtest_main
# )
# gtest_discover_tests(test_vreg)

# 测试 Process 模块
# add_executable(test_process test_process.cpp)
# target_link_libraries(test_process
#     PRIVATE
#         engine_process
#         GTest::gtest
#         GTest::gtest_main
# )
# gtest_discover_tests(test_process)

# POC 阶段：创建简单测试占位符
# 这些测试在 MVP 阶段会被真正的单元测试替代

if(BUILD_TESTING)
    message(STATUS "构建测试目标")
    
    # 添加自定义测试目标（用于验证编译是否成功）
    add_custom_target(test_engine_compile
        COMMAND ${CMAKE_COMMAND} -E echo "Hook 引擎模块编译测试通过"
        DEPENDS engine_hook engine_vfs engine_vreg engine_process engine_common
        COMMENT "测试引擎模块编译"
    )
    
    add_test(
        NAME engine_compile_test
        COMMAND ${CMAKE_COMMAND} -E echo "引擎模块编译测试"
    )
    
    message(STATUS "引擎单元测试配置完成（占位符）")
else()
    message(STATUS "测试构建已禁用（BUILD_TESTING=OFF）")
endif()
